[gd_scene load_steps=9 format=3 uid="uid://btam7syalfr2m"]

[ext_resource type="Script" path="res://unit_screen.gd" id="1_wmvqf"]
[ext_resource type="PackedScene" uid="uid://b13op42pqpmk5" path="res://picker.tscn" id="2_5t644"]
[ext_resource type="PackedScene" uid="uid://boccq28qleadg" path="res://squad_list.tscn" id="2_qd3ce"]
[ext_resource type="PackedScene" uid="uid://cjmlqam3kpsvg" path="res://paper_doll.tscn" id="3_10n5x"]
[ext_resource type="PackedScene" uid="uid://deyqsf45d3wim" path="res://stat_list.tscn" id="6_c7fp0"]
[ext_resource type="PackedScene" uid="uid://dkqn4ggkqnmyg" path="res://minimizable_list.tscn" id="7_7itys"]
[ext_resource type="PackedScene" uid="uid://bbvij8ic2388a" path="res://anything_list.tscn" id="7_w3dqq"]
[ext_resource type="PackedScene" uid="uid://bh22nsw5l5cn7" path="res://lesson_picker.tscn" id="8_8bsr4"]

[node name="UnitScreen" type="Panel"]
custom_minimum_size = Vector2(1200, 700)
offset_right = 1200.0
offset_bottom = 700.0
script = ExtResource("1_wmvqf")

[node name="Commit" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 638.5
offset_right = 99.0
offset_bottom = 669.5
text = "Commit"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 136.0
offset_right = 198.0
offset_bottom = 625.0

[node name="SquadList" parent="Panel3" instance=ExtResource("2_qd3ce")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Picker" parent="." instance=ExtResource("2_5t644")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 424.0
offset_top = 132.0
offset_right = 643.0
offset_bottom = 536.0
grow_horizontal = 1
grow_vertical = 1

[node name="UnitName" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 22.0
offset_right = 369.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 51
text = "UNIT NAME"

[node name="ClassOptions" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 99.0
offset_right = 303.0
offset_bottom = 119.0

[node name="InventoryContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 148.0
offset_right = 834.0
offset_bottom = 348.0

[node name="PaperDoll" parent="InventoryContainer" instance=ExtResource("3_10n5x")]
layout_mode = 2

[node name="InventoryList" parent="InventoryContainer" instance=ExtResource("7_w3dqq")]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 360.0
offset_right = 815.0
offset_bottom = 516.0

[node name="FuelList" parent="StatsContainer" instance=ExtResource("6_c7fp0")]
layout_mode = 2

[node name="QualityList" parent="StatsContainer" instance=ExtResource("6_c7fp0")]
layout_mode = 2

[node name="UpgradeScroller" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 139.0
offset_right = 1161.0
offset_bottom = 673.0

[node name="UpgradeContainer" type="VBoxContainer" parent="UpgradeScroller"]
layout_mode = 2

[node name="LessonHolder" parent="UpgradeScroller/UpgradeContainer" instance=ExtResource("7_7itys")]
layout_mode = 2

[node name="UpgradeHolder" parent="UpgradeScroller/UpgradeContainer" instance=ExtResource("7_7itys")]
layout_mode = 2

[node name="AbilityScroller" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 523.0
offset_right = 814.0
offset_bottom = 675.0

[node name="AbilityList" parent="AbilityScroller" instance=ExtResource("7_w3dqq")]
layout_mode = 2
columns = 1024

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 80.0
offset_right = 1078.0
offset_bottom = 103.0
text = "Level 1"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1093.0
offset_top = 75.0
offset_right = 1168.0
offset_bottom = 106.0
text = "Level Up"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 1093.0
offset_top = 35.0
offset_right = 1168.0
offset_bottom = 66.0
text = "Give EXP"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 682.0
offset_top = 79.0
offset_right = 1009.0
offset_bottom = 106.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 44.0
offset_right = 977.0
offset_bottom = 67.0
text = "0/0"
horizontal_alignment = 1

[node name="InnerCircleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 963.0
offset_top = 25.0
offset_right = 1041.0
offset_bottom = 56.0
text = "Add to IC"

[node name="AttackOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 171.0
offset_right = 722.0
offset_bottom = 191.0

[node name="SecondaryAttack" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 195.0
offset_right = 722.0
offset_bottom = 215.0

[node name="LessonPick" type="Button" parent="."]
layout_mode = 0
offset_left = 522.0
offset_top = 63.0
offset_right = 658.0
offset_bottom = 94.0
text = "Choose Levelup"

[node name="LessonsAvailable" type="Label" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 68.0
offset_right = 495.0
offset_bottom = 91.0
text = "Levelup Points: 0"

[node name="UpgradePicker" parent="." instance=ExtResource("8_8bsr4")]
visible = false
layout_mode = 0
offset_left = 407.0
offset_top = 175.0
offset_right = 807.0
offset_bottom = 575.0

[connection signal="pressed" from="Commit" to="." method="_on_commit_pressed"]
[connection signal="item_selected" from="ClassOptions" to="." method="_on_class_options_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="InnerCircleButton" to="." method="_on_inner_circle_button_pressed"]
[connection signal="item_selected" from="AttackOption" to="." method="_on_attack_option_item_selected"]
[connection signal="item_selected" from="SecondaryAttack" to="." method="_on_secondary_attack_item_selected"]
[connection signal="pressed" from="LessonPick" to="." method="_on_lesson_pick_pressed"]
